<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/road"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/back_style"
            android:text="@string/road"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bridge"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/back_style"
            android:text="@string/bridge"
            android:textSize="15sp" />

        <Button
            android:id="@+id/building"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/back_style"
            android:text="@string/building"
            android:textSize="15sp" />

        <Button
            android:id="@+id/river"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/back_style"
            android:text="@string/river"
            android:textSize="15sp" />

        <Button
            android:id="@+id/design"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/back_style"
            android:text="@string/design"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>