<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/baby_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout style="@style/ToolbarRl">

        <android.support.v7.widget.Toolbar style="@style/Toolbar">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/ToolbarTitle"
                android:text="@string/baby_go_home" />
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/toolbar_left"
            style="@style/ToolbarLeft"
            android:src="@mipmap/toolbar_back" />

        <ImageView
            android:id="@+id/toolbar_right"
            style="@style/ToolbarRight"
            android:src="@mipmap/toolbar_more" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/dealing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/dealing"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <cug.school.sketching.common.DrawSketchView
            android:id="@+id/draw_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f5f5f5f5" />

        <LinearLayout
            android:id="@+id/choose_graphic_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/road_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/road"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/bridge_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bridge"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/building_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/building"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/river_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/river"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/design_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/design"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/half_alpha"
                android:dividerHeight="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/operation_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:background="@drawable/item_stroke"
            android:visibility="gone">

            <TextView
                android:id="@+id/undo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/undo"
                android:textSize="15sp"
                android:textColor="@color/font_gray_deep"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/line"/>

            <TextView
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reset"
                android:textSize="15sp"
                android:textColor="@color/font_gray_deep"/>
        </LinearLayout>

        <TextView
            android:id="@+id/xml_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/choose_picture"
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbarSize"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/choose_picture"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/operation"
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbarSize"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/operation"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/find_home"
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbarSize"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/find_home"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
